# Artemis

./: .gitignore  1  EXPERIMENT.md  README.md  README_gtc.md  all_in_one.sh  requirements.txt  run_client.sh  run_experiment.sh  start_system.sh
ansible/: .gitignore  ansible.cfg  provision.sh  provision.yml
cpp/: .gitignore  CMakeLists.txt  compile.sh  run-remote.sh  run.sh  sync.sh
cpp/src/loadbalancer/: balancer.cpp
dockerfiles/: Dockerfile  Dockerfile-ssh  router.env  server.env
docs/: LICENSE  topology.md
experiment/: README.md  build-images.sh  build-vms.sh  build.sh  logging.py  run-experiment.sh  run_client.sh  sync.sh
fabric/: dns  fabfile.py  hosts_plt  output  planetlab.py  traceroute.csv  traceroute2.csv  traceroute_log
gcloud/: create.sh  data.py  delete.sh  handle.py  parallel_ping.py  ping.py  start.sh  stop.sh
hestia/: __init__.py  clean_up.py  collector.py  main.py  query_machines.py  start_up.py  test.py
keys/: server.cert  server.key
matlab/: anycast_increment.m  benchmark.m  cloudflare.m  demo.m  duplication.m  exp1.m  latency.m  main.m  overall_cmp.m  performance.m  routing.m
resources/: .gitignore  demo.json
scripts/: .gitignore  allNodes.sh  conduct_exp1.sh  conduct_exp1_direct.sh  conduct_exp1_hit.sh  conduct_exp1_miss.sh  conduct_exp1_sid.sh  entrypoint.sh  get_server_info.sh  init.sh  latency.sh  prepare_and_run.sh  run_remote.sh  setup_ovs_router.sh  setup_ovs_server.sh  start.sh  start_client.sh  start_server.sh  sync.sh  sync_gcp.sh  sync_planetlab.sh  sync_planetlab_i386.sh  sync_servers.sh  timeout.sh
sql/: sip.sql  (+2 more)
(+1694 files in other folders)
